Update Gradle and minor modifications

--- a/app/src/main/res/layout/buy_music_activity.xml
+++ b/app/src/main/res/layout/buy_music_activity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -15,9 +16,11 @@
         <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
+            android:layout_marginRight="@dimen/padding_small"
+            android:layout_marginEnd="@dimen/padding_small"
             android:layout_weight="1"
             android:hint="@string/search_for"
+            android:inputType="text"
             android:textColor="@color/color07" />
 
         <ImageButton
@@ -25,6 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@null"
+            android:contentDescription="@string/search"
             android:src="@drawable/search" />
 
     </LinearLayout>
@@ -38,5 +42,6 @@
         android:id="@+id/list_view_buy_music"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2" />
+        android:layout_weight="2"
+        tools:listitem="@layout/list_item_buy" />
 </LinearLayout>
