--- a/app/src/main/res/layout/list_item_buy.xml
+++ b/app/src/main/res/layout/list_item_buy.xml
@@ -5,10 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:paddingBottom="8dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="8dp"
-    android:paddingTop="8dp">
+    android:paddingBottom="@dimen/padding_small"
+    android:paddingEnd="@dimen/padding_small"
+    android:paddingLeft="@dimen/padding"
+    android:paddingRight="@dimen/padding_small"
+    android:paddingStart="@dimen/padding"
+    android:paddingTop="@dimen/padding_small">
 
     <LinearLayout
         android:layout_width="0dp"
@@ -28,43 +30,28 @@
 
         <TextView
             android:id="@+id/artist"
+            style="@style/SmallTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="sans-serif"
-            android:textAppearance="?android:textAppearanceSmall"
-            android:textColor="@color/color06"
             tools:text="Artist" />
     </LinearLayout>
 
     <TextView
         android:id="@+id/duration"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="1"
-        android:fontFamily="sans-serif"
-        android:paddingLeft="8dp"
-        android:textAppearance="?android:textAppearanceSmall"
-        android:textColor="@color/color06"
+        style="@style/PriceTextStyle"
         tools:text="3:13" />
 
     <TextView
         android:id="@+id/price"
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:fontFamily="sans-serif"
-        android:paddingLeft="8dp"
-        android:textAppearance="?android:textAppearanceSmall"
-        android:textColor="@color/color06"
+        style="@style/PriceTextStyle"
         tools:text="10$" />
 
     <Button
         android:id="@+id/my_music"
         android:layout_width="64dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="@dimen/padding_small"
+        android:layout_marginStart="@dimen/padding_small"
         android:backgroundTint="@color/color03"
         android:text="@string/buy"
         android:textColor="@color/color07" />
