--- a/app/src/main/res/layout/my_music_activity.xml
+++ b/app/src/main/res/layout/my_music_activity.xml
@@ -14,5 +14,6 @@
     <ListView
         android:id="@+id/list_view_music"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        tools:listitem="@layout/list_item_my"/>
 </LinearLayout>
