--- a/app/src/main/res/layout/play_music_activity.xml
+++ b/app/src/main/res/layout/play_music_activity.xml
@@ -12,7 +12,7 @@
         android:layout_weight="2"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="8dp">
+        android:padding="@dimen/padding_small">
 
         <TextView
             android:id="@+id/artist"
@@ -43,7 +43,8 @@
         android:layout_height="0dp"
         android:layout_weight="5"
         android:scaleType="centerCrop"
-        android:src="@drawable/music" />
+        android:src="@drawable/music"
+        tools:ignore="contentDiscription" />
 
     <TextView
         android:layout_width="match_parent"
@@ -62,7 +63,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="left"
+            android:gravity="start"
             android:textColor="@color/color01"
             android:textStyle="bold"
             tools:text="0:00" />
@@ -72,7 +73,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="right"
+            android:gravity="end"
             android:textColor="@color/color01"
             android:textStyle="bold"
             tools:text="4:30" />
@@ -82,7 +83,7 @@
         android:id="@+id/music_progress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
+        android:padding="@dimen/padding_small"
         android:paddingEnd="36dp"
         android:paddingStart="36dp" />
 
@@ -92,50 +93,44 @@
         android:background="@color/color03"
         android:gravity="center"
         android:orientation="horizontal"
-        android:padding="8dp">
+        android:padding="@dimen/padding_small">
 
         <ImageButton
             android:id="@+id/previous"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/round_button"
-            android:padding="8dp"
+            style="@style/ImageButtonStyle"
+            android:contentDescription="@string/previous"
             android:src="@drawable/previous" />
 
         <ImageButton
             android:id="@+id/backward"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:background="@drawable/round_button"
-            android:padding="8dp"
+            style="@style/ImageButtonStyle"
+            android:layout_marginLeft="@dimen/padding_small"
+            android:layout_marginStart="@dimen/padding_small"
+            android:contentDescription="@string/rewind"
             android:src="@drawable/fast_rewind" />
 
         <ImageButton
             android:id="@+id/play"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:background="@drawable/round_button"
-            android:padding="8dp"
+            style="@style/ImageButtonStyle"
+            android:layout_marginLeft="@dimen/padding_small"
+            android:layout_marginStart="@dimen/padding_small"
+            android:contentDescription="@string/play"
             android:src="@drawable/play" />
 
         <ImageButton
             android:id="@+id/forward"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:background="@drawable/round_button"
-            android:padding="8dp"
+            style="@style/ImageButtonStyle"
+            android:layout_marginLeft="@dimen/padding_small"
+            android:layout_marginStart="@dimen/padding_small"
+            android:contentDescription="@string/forward"
             android:src="@drawable/fast_forward" />
 
         <ImageButton
             android:id="@+id/next"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:background="@drawable/round_button"
-            android:padding="8dp"
+            style="@style/ImageButtonStyle"
+            android:layout_marginLeft="@dimen/padding_small"
+            android:layout_marginStart="@dimen/padding_small"
+            android:contentDescription="@string/next"
             android:src="@drawable/next" />
 
     </LinearLayout>
